@@ -31,7 +31,6 @@ Sometimes:
   constructs with path relative to file they are in as this is near impossible 
   to implement outside parser.)
 * Parser-level namespaces
-* Use standard exception mechanism in parser
 * syntax-rules
 
 External modules and libraries:
